11th August Evening

--- a/OnlineExaminationAPISolution/OnlineExaminationAPIProject/OnlineExaminationAPIProject.csproj
+++ b/OnlineExaminationAPISolution/OnlineExaminationAPIProject/OnlineExaminationAPIProject.csproj
@@ -104,7 +104,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\FilesController.cs" />
-    <Compile Include="Controllers\TestController.cs" />
+    <Compile Include="Controllers\TestsController.cs" />
     <Compile Include="Controllers\TestStructuresController.cs" />
     <Compile Include="Models\Admin.cs">
       <DependentUpon>OnlineExaminationModel.tt</DependentUpon>
