--- a/OnlineExaminationApplication/package.json
+++ b/OnlineExaminationApplication/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~10.0.4",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "js-sha512": "^0.8.0",
+    "ngx-cookie-service": "^10.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
