--- a/OnlineExaminationAPISolution/OnlineExaminationAPIProject/bin/OnlineExaminationAPIProject.dll.config
+++ b/OnlineExaminationAPISolution/OnlineExaminationAPIProject/bin/OnlineExaminationAPIProject.dll.config
@@ -48,8 +48,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="db_OnlineExaminationEntities" connectionString="metadata=res://*/Models.OnlineExaminationModel.csdl|res://*/Models.OnlineExaminationModel.ssdl|res://*/Models.OnlineExaminationModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KARTIK;initial catalog=db_OnlineExamination;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="db_OnlineExaminationEntities" connectionString="metadata=res://*/Models.OnlineExaminationModel.csdl|res://*/Models.OnlineExaminationModel.ssdl|res://*/Models.OnlineExaminationModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KARTIK;initial catalog=db_OnlineExamination;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
