--- a/OnlineExaminationApplication/package.json
+++ b/OnlineExaminationApplication/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
     "js-sha512": "^0.8.0",
+    "ng2-charts": "^2.3.3",
     "ngx-cookie-service": "^10.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
